--- a/Analytic_biblio.bib
+++ b/Analytic_biblio.bib
@@ -25,13 +25,13 @@ eprint = { https://doi.org/10.1063/1.472933}
 }
 
 @article {deltaTest2016,
-	author = {Lejaeghere, Kurt and Bihlmayer, Gustav and Bj{\"o}rkman, Torbj{\"o}rn and Blaha, Peter and Bl{\"u}gel, Stefan and Blum, Volker and Caliste, Damien and Castelli, Ivano E. and Clark, Stewart J. 
-	and Dal Corso, Andrea and de Gironcoli, Stefano and Deutsch, Thierry and Dewhurst, John Kay and Di Marco, Igor and Draxl, Claudia and Du{\l}ak, Marcin and Eriksson, Olle and Flores-Livas, Jos{\'e} A. 
-	and Garrity, Kevin F. and Genovese, Luigi and Giannozzi, Paolo and Giantomassi, Matteo and Goedecker, Stefan and Gonze, Xavier and Gr{\r a}n{\"a}s, Oscar and Gross, E. K. U. and Gulans, Andris 
-	and Gygi, Fran{\c c}ois and Hamann, D. R. and Hasnip, Phil J. and Holzwarth, N. A. W. and Iu{\c s}an, Diana and Jochym, Dominik B. and Jollet, Fran{\c c}ois and Jones, Daniel and Kresse, Georg 
-	and Koepernik, Klaus and K{\"u}{\c c}{\"u}kbenli, Emine and Kvashnin, Yaroslav O. and Locht, Inka L. M. and Lubeck, Sven and Marsman, Martijn and Marzari, Nicola and Nitzsche, Ulrike 
-	and Nordstr{\"o}m, Lars and Ozaki, Taisuke and Paulatto, Lorenzo and Pickard, Chris J. and Poelmans, Ward and Probert, Matt I. J. and Refson, Keith and Richter, Manuel and Rignanese, Gian-Marco 
-	and Saha, Santanu and Scheffler, Matthias and Schlipf, Martin and Schwarz, Karlheinz and Sharma, Sangeeta and Tavazza, Francesca and Thunstr{\"o}m, Patrik and Tkatchenko, Alexandre 
+	author = {Lejaeghere, Kurt and Bihlmayer, Gustav and Bj{\"o}rkman, Torbj{\"o}rn and Blaha, Peter and Bl{\"u}gel, Stefan and Blum, Volker and Caliste, Damien and Castelli, Ivano E. and Clark, Stewart J.
+	and Dal Corso, Andrea and de Gironcoli, Stefano and Deutsch, Thierry and Dewhurst, John Kay and Di Marco, Igor and Draxl, Claudia and Du{\l}ak, Marcin and Eriksson, Olle and Flores-Livas, Jos{\'e} A.
+	and Garrity, Kevin F. and Genovese, Luigi and Giannozzi, Paolo and Giantomassi, Matteo and Goedecker, Stefan and Gonze, Xavier and Gr{\r a}n{\"a}s, Oscar and Gross, E. K. U. and Gulans, Andris
+	and Gygi, Fran{\c c}ois and Hamann, D. R. and Hasnip, Phil J. and Holzwarth, N. A. W. and Iu{\c s}an, Diana and Jochym, Dominik B. and Jollet, Fran{\c c}ois and Jones, Daniel and Kresse, Georg
+	and Koepernik, Klaus and K{\"u}{\c c}{\"u}kbenli, Emine and Kvashnin, Yaroslav O. and Locht, Inka L. M. and Lubeck, Sven and Marsman, Martijn and Marzari, Nicola and Nitzsche, Ulrike
+	and Nordstr{\"o}m, Lars and Ozaki, Taisuke and Paulatto, Lorenzo and Pickard, Chris J. and Poelmans, Ward and Probert, Matt I. J. and Refson, Keith and Richter, Manuel and Rignanese, Gian-Marco
+	and Saha, Santanu and Scheffler, Matthias and Schlipf, Martin and Schwarz, Karlheinz and Sharma, Sangeeta and Tavazza, Francesca and Thunstr{\"o}m, Patrik and Tkatchenko, Alexandre
 	and Torrent, Marc and Vanderbilt, David and van Setten, Michiel J. and Van Speybroeck, Veronique and Wills, John M. and Yates, Jonathan R. and Zhang, Guo-Xu and Cottenier, Stefaan},
 	title = {Reproducibility in density functional theory calculations of solids},
 	volume = {351},
@@ -249,13 +249,13 @@ pages = {014109},
 year = {2008},
 doi = {10.1063/1.2949547},
 
-URL = { 
+URL = {
         https://doi.org/10.1063/1.2949547
-    
+
 },
-eprint = { 
+eprint = {
         https://doi.org/10.1063/1.2949547
-    
+
 }
 
 }
@@ -270,13 +270,13 @@ pages = {104109},
 year = {2013},
 doi = {10.1063/1.4793260},
 
-URL = { 
+URL = {
         https://doi.org/10.1063/1.4793260
-    
+
 },
-eprint = { 
+eprint = {
         https://doi.org/10.1063/1.4793260
-    
+
 }
 
 }
@@ -303,3 +303,16 @@ pages = {155-192},
 doi = {10.1142/9789812830586_0005},
 abstract = { Abstract Time-dependent density-functional response theory (TD-DFRT) is presented from the point of view of quantum chemistry. The extension of density-functional theory (DFT) into the time-domain is reviewed from the point of view of Runge, Gross, and Kohn. The basic working equations of TD-DFRT are then derived in a form analogous to the time-dependent Hartree–Fock (TDHF) equations used for molecular calculations. This is the first practical formulation of TD-DFRT for molecular applications, and the equations are presented in a more general form than has been the case for either atoms or solids. In particular, the present TD-DFRT equations anticipate applications to open-shell molecules based on spin-unrestricted DFT equations with fractional occupation numbers, and are general enough to accept time-dependent exchange-correlation functionals beyond the adiabatic approximation. The use of auxiliary function techniques to eliminate the four-center integrals that arise in TD-DFRT is discussed. The simple example of H2 is used to illustrate the TD-DFRT method and its relationship to TDHF and to the usual ad hoc ΔSCF-based DFT treatment of excited states. The TD-DFRT method set forth here provides a powerful DFT technique for the calculation of such optical properties as dynamic polarizabilities and electronic excitation spectra, and can be readily extended to treat a number of other properties such as hyperpolarizabilities and intermolecular forces. }
 }
+
+@Article{HeadGordon,
+author ="Hait, Diptarka and Head-Gordon, Martin",
+title  ="How accurate are static polarizability predictions from density functional theory? An assessment over 132 species at equilibrium geometry",
+journal  ="Phys. Chem. Chem. Phys.",
+year  ="2018",
+volume  ="20",
+issue  ="30",
+pages  ="19800-19810",
+publisher  ="The Royal Society of Chemistry",
+doi  ="10.1039/C8CP03569E",
+url  ="http://dx.doi.org/10.1039/C8CP03569E",
+abstract  ="Static polarizabilities are the first response of the electron density to electric fields{,} and are therefore important for predicting intermolecular and molecule-field interactions. They also offer a global measure of the accuracy of the treatment of excited states by density functionals in a formally exact manner. We have developed a database of benchmark static polarizabilities for 132 small species at equilibrium geometry{,} using coupled cluster theory through triple excitations (extrapolated to the complete basis set limit){,} for the purpose of developing and assessing density functionals. The performance of 60 popular and recent functionals are also assessed{,} which indicates that double hybrid functionals perform the best{,} having RMS relative errors in the range of 2.5–3.8%. Many hybrid functionals also give quite reasonable estimates with 4–5% RMS relative error. A few meta-GGAs like mBEEF and MVS yield performance comparable to hybrids{,} indicating potential for improved excited state predictions relative to typical local functionals. Some recent functionals however are found to be prone to catastrophic failure (possibly as a consequence of overparameterization){,} indicating a need for caution in applying these.
