--- a/Response_referees.tex
+++ b/Response_referees.tex
@@ -49,6 +49,7 @@ List of major changes:
  \item We have reorganized the material after section III A. In particular we have introduced a new section (number IV in the actual version of the paper) in which we have discussed both the physical features of the excitation spectrum and the relative importance of localized vs. delocalized sector in expressing the susceptibility functional. This section also collects computational results for molecules beyond the case of $CO$ and benzene.
  \item We have also included in our analysis the treatment of various molecular systems, of various sizes and symmetries, such as to further illustrate the generality of our assumptions. A table has been added for comparing the excitation landscape of the molecules, in particular related to the ability of the numerical excitations to
  express the static polarizability tensor.
+ \item we have added a reference to the URL of the supplementary material which contains the data analysis and further results in support of our findings
 \end{itemize}
 
 \section*{Response to the first referee}
@@ -71,7 +72,7 @@ Here we report the detailed answers concerning the main aspects raised in the re
 
  In presenting the results of this paper care has been taken to ensure the convergence of the results wrt the computational parameters. We have found that there are no relevant difference in the convergence rate of localized vs delocalized quantities (for instance excitations) in function of the grid spacing. This is due to the fact that localized and delocalized states differ in their asymptotic properties whereas the grid spacing convergence is influenced by the short-range oscillation of the functions.
 
- The values of the grid spacing used for the calculations have been added in appendix C.
+ The values of the grid spacing used for the calculations may be found in the supplementary material.
 
 \item Other minor corrections:
 \begin{itemize}
@@ -104,11 +105,11 @@ We answer to the critical points raised out in the report of the referee:
 
   However the same structure of the excitation spectrum is quite general and turns out not to be affected by the size or symmetry of the molecule. To check this statement we have repeated
  the same computational analysis for several other molecules of different shape and dimension like the Fullerene and the Aflatoxin, a low-symmetry molecule of 35 atoms which is not as little and exhibit generic features. Results for this studies
- are presented as supplementary materials. See Ref.XXX
+ are presented as supplementary materials. See Ref.22 of the revised manuscript.
 
  Looking at the excitation landscape for these cases, extracted with the same procedure and tolerance parameters of the cases presented in the paper we see that our consideration are relatively independent from the molecule symmetry: in particular, the number of excitations which
  belong to the localized sector, even above the first IP
- seems to _increase_ with the molecule's size.
+ seems to increase with the molecule's size.
  This is due to the increasing of the KS density of states below the continuum threshold which ensures the realization of more localized excitations.
 
 However, see answer below, such a behaviour is not particularly relevant as we have demonstratated that the
@@ -132,7 +133,7 @@ In the previous version of the manuscript the answer to this question was adress
  For this reason, we have further clarified the
  importance of a computational setup that does not exclude ``by design'' the long-range oscillatory behaviour of the localized excitations, especially for the representation
  of the fluctuation states above threshold.
- Nonetheless, in the optical regime the FS are localized quantities, and it is thus possible -in principle - to express them precisely, in localized basis sets. However, such a representation is \emph{doomed to fail} for frequencies above IP, due to the incorrect asymptotic behaviour of  states above threshold.
+ Nonetheless, in the optical regime the FS are localized quantities, and it is thus possible -in principle - to express them precisely, in localized basis sets. However, such a representation is \emph{doomed to fail} for frequencies above IP, due to the incorrect asymptotic behaviour of states above threshold.
 
 
  ......................
