--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -757,7 +757,7 @@ in the complete basis set limit.
 We believe that these considerations, based on simple manipulations on the fundamental LR equations, will help in increase the reliability of LR
 calculations in the community, and in building test-sets that would help in the \emph{calibration} of present and future computer codes, thereby
 increasing the predictivity of present-day theoretical approaches. The example of the static polarizability of molecules
-presents ideal features as an initial playground. Work is ongoing in this direction.
+presents ideal features as an initial playground, as it has already been pointed out recently~\cite{HeadGordon}. Work is ongoing in this direction.
 
 \begin{acknowledgments}
 We thank Thierry Deutsch for useful comments on the manuscript.
@@ -865,6 +865,8 @@ Norm Conserving Pseudopotentials (PSP) of the HGH \cite{NLCCPSP} type are employ
 
 Our LR calculation are performed with the Casida formalism \cite{bhaarathi}, where it is also important to include a sufficient number of unoccupied states in the transition operators. As pointed out in the text such states behave as plane waves: the features of wavelets enable us to represent localized and delocalized states on equal footing.
 For each size of the simulation domain, the number of unoccupied states used for building the Casida' eigenproblem has been increased up to convergence of the presented results.
+
+All the details of the calculations, the \textsl{Jupyter} notebooks of the data analysis, including the supplementary informations, may be found at the URL~\footnote{\texttt{https://github.com/luigigenovese/LR-nb/blob/master/ POLARIZABILITY/nb\_paper/LR\_Analysis.ipynb}, or \texttt{https://gitlab.com/luigigenovese/ localization-of-excitations/ blob/master/LR\_Analysis.ipynb}}
 
 \subsection{$CO$}
 The molecule is oriented along the $z$ axis and the $z$-dimension of the box is equal to 11.5, 15.1 and 16.6 \AA.
